<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_bt_server_controller"
    tools:context="com.gdt.lianxuezhang.galaxydragontravel.BtServerController"
    android:id="@+id/relative_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:id="@+id/company_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_uuid"
        android:id="@+id/company_uuid"
        android:layout_below="@+id/company_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_signal"
        android:id="@+id/btn_bt_signal"
        android:layout_below="@+id/company_uuid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:onClick="switchSignal"

        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advertise_status"
        android:id="@+id/advertise_status"
        android:layout_below="@+id/btn_bt_signal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmp_log_out"
        android:id="@+id/company_logout"
        android:layout_below="@+id/advertise_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:onClick="btnClick"

        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textStyle="bold"/>

</RelativeLayout>
