<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_punch"
    tools:context="com.gdt.lianxuezhang.galaxydragontravel.Punch">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/selected_company">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:id="@+id/company_name"
            android:layout_gravity="center_horizontal" />

        <Button
            android:width="150dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punch_in"
            android:id="@+id/punch_in"
            android:layout_gravity="center_horizontal"

            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"

            android:onClick="btnClick" />

        <Button
            android:width="150dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/punch_out"
            android:id="@+id/punch_out"
            android:layout_gravity="center_horizontal"

            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"

            android:onClick="btnClick" />

        <Button
            android:width="150dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunch_out"
            android:id="@+id/lunch_out"
            android:layout_gravity="center_horizontal"

            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"

            android:onClick="btnClick" />

        <Button
            android:width="150dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunch_back"
            android:id="@+id/lunch_back"
            android:layout_gravity="center_horizontal"

            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textStyle="bold"

            android:onClick="btnClick" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selected_company"
        android:name="selected_company"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:width="150dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emp_log_out"
        android:id="@+id/log_out"
        android:layout_below="@+id/selected_company"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"

        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:textStyle="bold" />

</RelativeLayout>
